@@ -1,3 +1,5 @@
+* Ensure Hash does not return keys from the prototype chain (e.g., constructor, valueOf, toString). [kangax]
+
 * Fix toString/valueOf sharing same method reference via closure in Class#addMethods. Use plain property assignment, since Object.extend fails to enumerate over toString/valueOf. Closes #10841. [broofa, kangax]
 
 * unit test: Update DOM unit tests to avoid failing on Element#replace tests in Opera. [Andrew Dupont, jddalton]
